# DAAAM

./: .dockerignore  .gitignore  CODEBASE.md  Docker_query  Docker_vis  Dockerfile  INSTALL.md  LICENSE  README.md  RUNNING.md  THIRD_PARTY_NOTICES.md  build.sh  pyproject.toml  requirements.txt  start.sh
config/: pipeline_config.yaml  pipeline_config_coda.yaml  uhumans2_office_custom.csv
config/efficientvit/: efficientvit_config.yaml
config/fastsam/: fastsam_config.yaml
config/prompt_templates/: binary_response.txt  distance_response.txt  location_response.txt  region_summary_system.txt  region_summary_user.txt  scene_understanding_system.txt  text_response.txt  time_response.txt  trajectory_response.txt
config/sam/: sam_vit_config.yaml
data/: DATA.md  oc-navqa_data.csv
install/: install.sh  packages.yaml
scripts/: demo_query.py  export_fastsam_trt.py  export_vanilla_clip_engine.py  postprocess_scene_graph.py  run_pipeline.py  run_static_visualizer.py  summarize_regions.py
src/daaam/: __init__.py  config.py  interfaces.py
src/daaam/assignment/: __init__.py  interfaces.py  models.py  schemas.py  services.py
src/daaam/datasets/: __init__.py  factory.py  interfaces.py
src/daaam/grounding/: __init__.py  interfaces.py  models.py  schemas.py  services.py  utils.py
src/daaam/hydra/: __init__.py  config_loader.py  integration.py  runner.py
src/daaam/pipeline/: __init__.py  models.py  orchestrator.py
src/daaam/scene_graph/: __init__.py  models.py  services.py
src/daaam/scene_understanding/: config.py  init.py  interfaces.py  models.py  prompt_utils.py  (+3 more)
(+40 files in other folders)
