[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daaam"
authors = [
    {name = "Nicolas Gorlo", email = "ngorlo@mit.edu"}
]
description = "Describe Anything, Anywhere, at Any Moment (DAAAM)"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dynamic = ["version"]

[project.urls]
Source = "https://github.com/MIT-SPARK/DAAAM"
Tracker = "https://github.com/MIT-SPARK/DAAAM/issues"

[tool.setuptools.packages.find]
where = ["src"]
